家具レコメンドのレスポンスにcolorとreasonを追加 (#133)
* add: API設計のレコメンドのレスポンスを修正

* add: OpneAPIの修正をgeneratorで適応

* add: furniture_recommend_postの戻り値の型を変更
